# BreakOut

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: AssetManager.hpp  Controls.hpp  Game.hpp  GameLogic.hpp  LeaderBoard.hpp  MainMenu.hpp  PauseGame.hpp  SaveScore.hpp  State.hpp  StateManager.hpp  Textbox.hpp  WinOrLose.hpp  helperLogic.hpp
src/: AssetManager.cpp  Controls.cpp  Game.cpp  GameLogic.cpp  LeaderBoard.cpp  MainMenu.cpp  PauseGame.cpp  SaveScore.cpp  StateManager.cpp  Textbox.cpp  WinOrLose.cpp  helperLogic.cpp
